# keyboard-midi-playground

./: Cargo.toml  README.md
src/: events.rs  input.rs  main.rs  message.rs  output.rs  player.rs  render.rs
src/app_state/: mod.rs
src/events/: event.rs  event_bus.rs  mod.rs
src/player/: keyboard.rs  keyboard_handler.rs  keyboard_transform.rs  metronome.rs  mod.rs  player.rs
src/scale/: blues_minor.rs  chord.rs  harmonic_minor.rs  melodic_minor.rs  mod.rs  natural_minor.rs  pentatonic_minor.rs  player.rs  scale.rs
src/ui/: canvas.rs  input.rs  keyboard.rs  keyboard_renderer.rs  mod.rs  render.rs  terminal.rs  user_events.rs
