[package]
name = "midi"
version = "0.1.0"
authors = ["Gabriel Poça <gabrielpoca@gmail.com>"]
edition = "2018"

[dependencies]
midir = "0.5.0"
tui = "0.5"
rand = "0.6.5"
crossbeam-channel = "0.3.8"
log = "0.4"
env_logger = "0.6.2"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["ttf"]
